--- a/private-tour.html
+++ b/private-tour.html
@@ -61,7 +61,7 @@
         label[for="tap1"],
         label[for="tap2"] {
             cursor: pointer;
-            font-size: 2rem;
+            font-size: 1.8rem;
         }
 
 
@@ -172,7 +172,7 @@
             font-size: large;
             display: block;
             border-radius: 50%;
-            font-weight: 600;
+            /* font-weight: 600; */
             font-size: 1.1rem;
             padding: 0;
         }
