--- a/private-tour.html
+++ b/private-tour.html
@@ -793,7 +793,7 @@
             }
 
             .nav {
-                padding: 15px 21px;
+                padding: 5px 21px;
             }
 
             /* .nav a {
@@ -1083,7 +1083,7 @@
             <div class="modal-content">
 
                 <div class="modal-body">
-                    <form validate>
+                    <form novalidate>
                         <div>
                             <button type="button" id="close" class="btn-close" data-bs-dismiss="modal"
                                 aria-label="Close"></button>
